test/conformance/kuttl/autogen/autogen-cel/policy-assert.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: disallow-host-path
spec:
  validationFailureAction: Enforce
  rules:
    - name: host-path
      match:
        any:
        - resources:
            kinds:
              - Pod
      validate:
        cel:
          expressions:
            - expression: "!has(object.spec.volumes) || object.spec.volumes.all(volume, !has(volume.hostPath))"
              message: "HostPath volumes are forbidden. The field spec.template.spec.volumes[*].hostPath must be unset."
status:
  conditions:
  - reason: Succeeded
    status: "True"
    type: Ready
  autogen:
    rules:
    - match:
        any:
        - resources:
            kinds:
            - DaemonSet
            - Deployment
            - Job
            - StatefulSet
            - ReplicaSet
            - ReplicationController
      name: autogen-host-path
      validate:
        cel:
          expressions:
          - expression: '!has(object.spec.template.spec.volumes) || object.spec.template.spec.volumes.all(volume,
              !has(volume.hostPath))'
            message: HostPath volumes are forbidden. The field spec.template.spec.volumes[*].hostPath
              must be unset.
    - match:
        any:
        - resources:
            kinds:
            - CronJob
      name: autogen-cronjob-host-path
      validate:
        cel:
          expressions:
          - expression: '!has(object.spec.jobTemplate.spec.template.spec.volumes)
              || object.spec.jobTemplate.spec.template.spec.volumes.all(volume, !has(volume.hostPath))'
            message: HostPath volumes are forbidden. The field spec.template.spec.volumes[*].hostPath
              must be unset.
